--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
-2018-07-10 - Luiz Gustavo da Silva Vasconcellos
+2018-07-10 - 0.1 - Luiz Gustavo da Silva Vasconcellos
 
-    * Versão inicial do projeto Simple 2048
+    * Versão inicial do projeto Simple 2048.
