--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
-2018-07-10 - 0.1 - Luiz Gustavo da Silva Vasconcellos
+2018-07-10 - 0.2 - Luiz Gustavo da Silva Vasconcellos
 
-    * Versão inicial do projeto Simple 2048.
+    * Adionado o tabuleiro e sua criação
+    * Adicionada função para escrever o valor de um quadrado
