Atualizado README com instruções das funções

--- a/README.mdwn
+++ b/README.mdwn
@@ -17,6 +17,12 @@ Dependências
 Para executar o Simple 2048 é necessário somente um navegador
 que interprete javascript, css3 e html5!
 
+Desenvolvimento
+---------------
+
+* Nosso jogo produz os campos por meio de uma função javascript de nome 'inicializar_tabuleiro'
+* A introdução de valores ao HTML é feita por meio da função 'redimencionar_quadrados', que mais tarde será renomeada devido a organização
+
 Outras informações
 ------------------
 
