--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,7 @@
 
     * Adionado o tabuleiro e sua criação
     * Adicionada função para escrever o valor de um quadrado
+
+2018-07-10 - 0.1 - Luiz Gustavo da Silva Vasconcellos
+
+    * Versão inicial do projeto Simple 2048.
