--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-07-12 - 0.3 - Luiz Gustavo da Silva Vasconcellos
+
+    * Atualização da documentação ('Fazendo um release')
+
 2018-07-10 - 0.2 - Luiz Gustavo da Silva Vasconcellos
 
     * Adionado o tabuleiro e sua criação
